# hpn-dbt-dw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml  dbt_cd.yml  dbt_ci.yml
dw_hpn/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dw_hpn/models/marts/core/: _core__models.yml  dim_customer.sql  dim_date.sql  dim_product.sql
dw_hpn/models/marts/finance/: _finance__models.yml  dim_account.sql  dim_account_header.sql  dim_department_group.sql  dim_organization.sql  fct_finance.sql
dw_hpn/models/marts/sales/: _sales__models.yml  fct_sales.sql  fct_sales_returns.sql
dw_hpn/models/staging/: _sources.yml  _stg__models.yml  stg_account.sql  stg_account_header.sql  stg_customer.sql  stg_department_group.sql  stg_finance.sql  stg_geography.sql  stg_organization.sql  stg_product.sql  stg_product_cost_history.sql  stg_product_sub_category.sql  stg_region.sql  stg_sales_details.sql  stg_sales_header.sql  stg_sales_returns.sql
dw_hpn/seeds/: _seeds__properties.yml  sales_user_roles.csv
