[project]
name = "hpn-dbt-dw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "dbt-core>=1.11.11",
    "dbt-snowflake>=1.11.5",
    "pandas>=2.1.2,<3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "snowflake-connector-python[pandas]>=4.6.0",
    "sqlalchemy>=2.0.50",
]
